[package]
name = "photon_correlation"
version = "0.1.0"
authors = ["Greg Morenz <morenzg@gmail.com>"]
edition = "2018"

[dependencies]
nom = { version="4.1.1", features=["verbose-errors"] }
memmap = "0.7.0"
arrayref = "0.3.5"
structopt = "0.2.14"
crossbeam-utils = "0.6.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true